--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -16,16 +16,15 @@ parts:
     build-packages:
       - sqlite3
       - python3-pip
+    stage-packages:
+      - python3-gtkspellcheck
+      - python3-requests
+      - python3-markdown-it
+      - python3-linkify-it
+      - python3-mdit-py-plugins
     override-pull: |
       craftctl default
       sed -e 's|Icon=@ICON@|Icon=$SNAP/usr/share/icons/hicolor/scalable/apps/org.gnome.gitlab.cheywood.Iotas.svg|' -i data/org.gnome.gitlab.cheywood.Iotas.desktop.in.in
-    override-build: |
-      craftctl default
-      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages requests
-      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages pygtkspellcheck
-      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages markdown-it-py
-      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages linkify-it-py
-      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages mdit-py-plugins
     organize:
       snap/iotas/current/usr: usr
     parse-info: [usr/share/metainfo/org.gnome.gitlab.cheywood.Iotas.metainfo.xml]
