--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,6 +6,13 @@ icon: org.gnome.gitlab.cheywood.Iotas.svg
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 
+package-repositories:
+  - type: apt
+    components: [main, multiverse, restricted, universe]
+    suites: [kinetic, kinetic-backports, kinetic-security, kinetic-updates]
+    key-id: F6ECB3762474EDA9D21B7022871920D1991BC93C
+    url: http://security.ubuntu.com/ubuntu
+
 parts:
   iotas:
     # See 'snapcraft plugins'
