--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,13 +6,6 @@ icon: org.gnome.gitlab.cheywood.Iotas.svg
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 
-package-repositories:
-  - type: apt
-    components: [main, multiverse, restricted, universe]
-    suites: [kinetic, kinetic-backports, kinetic-security, kinetic-updates]
-    key-id: F6ECB3762474EDA9D21B7022871920D1991BC93C
-    url: http://security.ubuntu.com/ubuntu
-
 parts:
   iotas:
     # See 'snapcraft plugins'
@@ -23,15 +16,17 @@ parts:
     build-packages:
       - sqlite3
       - python3-pip
-    stage-packages:
-      - python3-gtkspellcheck
-      - python3-requests
-      - python3-markdown-it
-      - python3-linkify-it
-      - python3-mdit-py-plugins
     override-pull: |
       craftctl default
       sed -e 's|Icon=@ICON@|Icon=$SNAP/usr/share/icons/hicolor/scalable/apps/org.gnome.gitlab.cheywood.Iotas.svg|' -i data/org.gnome.gitlab.cheywood.Iotas.desktop.in.in
+    override-build: |
+      craftctl default
+      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages requests
+      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages pygtkspellcheck
+      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages markdown-it-py
+      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages linkify-it-py
+      pip install --target=$CRAFT_PART_INSTALL/snap/dialect/current/usr/lib/python3/dist-packages mdit-py-plugins
+      sed -e '1c#!/usr/bin/env python3' -i "${CRAFT_PART_INSTALL}/snap/iotas/current/usr/bin/iotas"
     organize:
       snap/iotas/current/usr: usr
     parse-info: [usr/share/metainfo/org.gnome.gitlab.cheywood.Iotas.metainfo.xml]
