--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,14 +18,12 @@ parts:
     build-packages:
       - sqlite3
       - python3-pip
-    stage-packages:
-      - python3-requests
     override-pull: |
       craftctl default
       sed -e 's|Icon=@ICON@|Icon=$SNAP/usr/share/icons/hicolor/scalable/apps/org.gnome.gitlab.cheywood.Iotas.svg|' -i data/org.gnome.gitlab.cheywood.Iotas.desktop.in.in
     override-build: |
       craftctl default
-      #pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages requests
+      pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages requests
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages pygtkspellcheck
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages markdown-it-py
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages linkify-it-py
