--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -28,7 +28,9 @@ parts:
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages markdown-it-py
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages linkify-it-py
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages mdit-py-plugins
+      pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages PyGObject==3.42.2
       sed -e '1c#!/usr/bin/env python3' -i "${CRAFT_PART_INSTALL}/snap/iotas/current/usr/bin/iotas"
+
     organize:
       snap/iotas/current/usr: usr
     parse-info: [usr/share/metainfo/org.gnome.gitlab.cheywood.Iotas.metainfo.xml]
