--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,14 +18,14 @@ parts:
     build-packages:
       - python3-pip
     stage-packages:
-      - aspell
+      - python3-gtkspellcheck
     override-pull: |
       craftctl default
       sed -i 's|self.__css_provider.load_from_data(style.encode("utf8"))|self.__css_provider.load_from_data(style, -1)|' iotas/editor_text_view.py
     override-build: |
       craftctl default
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages requests
-      pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages pygtkspellcheck
+      #pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages pygtkspellcheck
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages markdown-it-py
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages linkify-it-py
       pip install --target=$CRAFT_PART_INSTALL/snap/iotas/current/usr/lib/python3/dist-packages mdit-py-plugins
