--- a/.github/workflows/snapcraft.yml
+++ b/.github/workflows/snapcraft.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: snapcore/action-build@v1
         id: snapcraft-build
 
-      - uses: diddlesnaps/snapcraft-review-action@v1
-        with:
-          snap: ${{ steps.snapcraft-build.outputs.snap }}
-          isClassic: 'false'
+#      - uses: diddlesnaps/snapcraft-review-action@v1
+#        with:
+#          snap: ${{ steps.snapcraft-build.outputs.snap }}
+#          isClassic: 'false'
           # Plugs and Slots declarations to override default denial (requires store assertion to publish)
           # plugs: ./plug-declaration.json
           # slots: ./slot-declaration.json
